# pirx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml  freshness-allow.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codspeed.yml  release.yml
crates/pirx-adapters/: Cargo.toml
crates/pirx-adapters/src/: error.rs  lib.rs  openqasm.rs  tket_json.rs
crates/pirx-adapters/tests/fixtures/: qelib1.inc  small_circuit.json  small_circuit.qasm
crates/pirx-cli/: Cargo.toml
crates/pirx-cli/src/: main.rs
crates/pirx-cli/tests/: profile.rs  sensitivity.rs
crates/pirx-cli/tests/fixtures/: cultivation_hw.toml  sweep_morris.toml  sweep_sobol.toml  t_gate_chain_3.pirx.json
crates/pirx-core/: Cargo.toml
crates/pirx-core/benches/: engine.rs
crates/pirx-core/src/: analysis.rs  buffer.rs  dag.rs  engine.rs  events.rs  lib.rs  monte_carlo.rs  routing.rs  trace.rs
crates/pirx-core/src/analysis/: analyzer.rs  mod.rs  profile.rs
crates/pirx-core/src/dag/: adjacency.rs  build.rs  kind.rs  mod.rs  mutate.rs  ready_queue.rs
crates/pirx-core/src/engine/: config.rs  dispatch.rs  mod.rs
crates/pirx-core/src/factory/: cultivation.rs  distillation.rs  mod.rs  rz_synthesis.rs
crates/pirx-core/tests/: engine_integration.rs  monte_carlo.rs  properties.rs
crates/pirx-hw/: Cargo.toml
crates/pirx-hw/src/: config.rs  error.rs  lib.rs  model.rs
crates/pirx-ir/: Cargo.toml
crates/pirx-ir/src/: circuit.rs  lib.rs  validate.rs
crates/pirx-sensitivity/: Cargo.toml
crates/pirx-sensitivity/src/: config.rs  error.rs  lib.rs  metric.rs  morris.rs  mutate.rs  parameter.rs  sample.rs  sobol.rs  sobol_sequence.rs
crates/pirx-sensitivity/tests/: eval_overhead.rs  morris_tests.rs  mutate_tests.rs  parameter_tests.rs  sobol_tests.rs
crates/pirx-testkit/: Cargo.toml
crates/pirx-testkit/src/: circuits.rs  hardware.rs  lib.rs
keys/: release.minisign.pub
models/: surface_code_d17_cultivation.toml  surface_code_d17_cultivation_manhattan.toml  surface_code_d17_distillation.toml  surface_code_d17_rz_synthesis.toml
python/: Cargo.toml  pyproject.toml
python/pirx/: __init__.py  _pirx.pyi
python/pirx/adapters/: __init__.py  _classify.py  qiskit.py  qualtran.py  tket.py
python/src/: circuit.rs  hardware.rs  lib.rs  pymontecarlo.rs  pyprofile.rs  pytrace.rs
python/tests/: conftest.py  test_circuit.py  test_hardware.py  test_profile.py  test_qiskit_adapter.py  test_qualtran_adapter.py  test_tket_adapter.py  test_trace.py
