[workspace]
resolver = "3"
members = [
    "crates/pirx-ir",
    "crates/pirx-hw",
    "crates/pirx-core",
    "crates/pirx-adapters",
    "crates/pirx-sensitivity",
    "crates/pirx-cli",
    "crates/pirx-testkit",
    "python",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["m2papierz@gmail.com"]
repository = "https://github.com/pirxware/pirx"
homepage = "https://github.com/pirxware/pirx"

[workspace.dependencies]
# Internal crates
pirx-ir = { path = "crates/pirx-ir" }
pirx-hw = { path = "crates/pirx-hw" }
pirx-core = { path = "crates/pirx-core" }
pirx-adapters = { path = "crates/pirx-adapters" }
pirx-sensitivity = { path = "crates/pirx-sensitivity" }
pirx-testkit = { path = "crates/pirx-testkit" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Quantum framework parsers
oq3_semantics = "0.7.0"
oq3_source_file = "0.7.0"
tket-json-rs = "0.8.3"

# Error handling
thiserror = "2"

# Arena / data structures
slotmap = { version = "1", features = ["serde"] }
smallvec = { version = "1", features = ["serde", "union"] }

# Randomness
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallel sensitivity sweep
rayon = "1"

# Testing
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
large_enum_variant = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
implicit_clone = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_wraps = "warn"
used_underscore_binding = "warn"

# ── Build profiles ─────────────────────────────────────────────────────────────

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
overflow-checks = true
panic = "abort"

[profile.bench]
inherits = "release"
strip = false
debug = 2
