[package]
name = "pirx-adapters"
version = "0.1.0"
publish = false
description = "Framework adapters: convert external circuit formats to Profiler IR"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
tket-json = ["dep:tket-json-rs", "dep:serde_json"]

[dependencies]
pirx-ir = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
oq3_semantics = "0.7.0"
oq3_source_file = "0.7.0"
tket-json-rs = { version = "0.8.3", optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tket-json-rs = "0.8.3"
serde_json = { workspace = true }

[lints]
workspace = true
