[package]
name = "pirx-hw"
version = "0.1.0"
publish = false
description = "Hardware model TOML specification and types"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
