[package]
name = "pirx-ir"
version = "0.1.0"
publish = false
description = "Profiler IR: framework-agnostic circuit representation"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
